--- a/шаблон — направления-дошкольникам - Дефектолог.html
+++ b/шаблон — направления-дошкольникам - Дефектолог.html
@@ -247,7 +247,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 119.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -363,16 +363,16 @@
                         <div class="uk-flex-center uk-flex problems-img uk-padding">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 121.png" alt="">
                         </div>
                     </div>
 
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m efficiency-reverse uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium uk-margin-top uk-grid"
                         uk-grid="">
                         <div class="uk-flex-center uk-flex problems-img uk-first-column uk-padding">
-                            <img class="uk-scrollspy-inview "
+                            <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 120.png" alt="">
                         </div>
                         <div class="efficiency efficiency-podgotovka">
                             <p class="efficiency-p uk-scrollspy-inview textcolor16"
@@ -423,15 +423,15 @@
                         <div class="uk-flex-center uk-flex problems-img uk-flex-last@m">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 124.png" alt="">
                         </div>
                     </div>
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m efficiency-reverse uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium uk-margin-top uk-grid"
                         uk-grid="">
                         <div class="uk-flex-center uk-flex problems-img uk-first-column uk-padding">
-                            <img class="uk-scrollspy-inview "
+                            <img class="uk-scrollspy-inview uk-padding"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 118.png" alt="">
                         </div>
                         <div class="efficiency efficiency-podgotovka">
                             <p class="efficiency-p uk-scrollspy-inview textcolor16"
@@ -486,9 +486,9 @@
 
                         </div>
                         <div class="uk-flex-center uk-flex problems-img uk-flex-last@m">
-                            <img class="uk-scrollspy-inview "
+                            <img class="uk-scrollspy-inview uk-padding"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 123.png" alt="">
                         </div>
                     </div>
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m efficiency-reverse uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium uk-margin-top uk-grid"
@@ -496,7 +496,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column uk-padding">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 125.png" alt="">
                         </div>
                         <div class="efficiency efficiency-podgotovka">
                             <p class="efficiency-p uk-scrollspy-inview textcolor16"
@@ -550,9 +550,9 @@
 
                         </div>
                         <div class="uk-flex-center uk-flex problems-img uk-flex-last@m">
-                            <img class="uk-scrollspy-inview"
+                            <img class="uk-scrollspy-inview uk-padding"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 122.png" alt="">
                         </div>
                     </div>
                 </section>
@@ -586,7 +586,7 @@
                             </li>
                         </ul>
                         <div>
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 126.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview">
                         </div>
                     </div>
