--- a/шаблон — направления-средняя-школа-математика.html
+++ b/шаблон — направления-средняя-школа-математика.html
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 127.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -271,7 +271,7 @@
                 <div alt="" class="elevn-section-img4 icons-radius icons-style" src=" ">
                 </div>
                 <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/циркуль.png">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/калькулятор.svg">
                 </div>
                 <div class="nine-section-img6 icons-block  icons-style" tabindex="0">
                     <img alt="" class="" src="https://cdn.nyutonika.ru/icons/Процент.svg">
@@ -345,7 +345,7 @@
                     <section class="nine-section-dop-icons uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                         <div class="elevn-section-img3 color16 icons-shadow icons-style" tabindex="0">
-                            <img alt="" class="" src="https://cdn.nyutonika.ru/icons/болшье меньше.svg">
+                            <img alt="" class="" src="https://cdn.nyutonika.ru/icons/циркуль.png">
                         </div>
 
 
@@ -359,7 +359,7 @@
 
 
                         <div class="uk-width-expand@m uk-margin uk-first-column">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 128.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
