Средняя школа математика 3

--- a/шаблон — направления-средняя-школа-математика.html
+++ b/шаблон — направления-средняя-школа-математика.html
@@ -403,7 +403,7 @@
 
                         </div>
                         <div class="uk-width-expand@m   uk-margin">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 129.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
@@ -412,7 +412,7 @@
 
 
                         <div class="uk-width-expand@m uk-margin uk-first-column">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 130.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
@@ -457,7 +457,7 @@
 
                         </div>
                         <div class="uk-width-expand@m   uk-margin">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 131.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
@@ -466,7 +466,7 @@
 
 
                         <div class="uk-width-expand@m uk-margin uk-first-column">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 132.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
@@ -527,12 +527,12 @@
                 <section class="nine-section-dop-icons uk-scrollspy-inview "
                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     <div class="seven-section-img2 icons-block icons-style">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/ ">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/доля-арбуз.svg ">
                     </div>
 
 
-                    <div class="nine-section-img5 icons-block icons-style">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/ ">
+                    <div class="nine-section-img5 icons-shadow icons-style">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/умножить.svg">
                     </div>
                 </section>
                 <section class="container-item">
@@ -558,7 +558,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 133.png" alt="">
                         </div>
                     </div>
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium  uk-grid-stack"
