Средняя школа математика 4

--- a/шаблон — направления-средняя-школа-математика.html
+++ b/шаблон — направления-средняя-школа-математика.html
@@ -566,7 +566,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 135.png" alt="">
                         </div>
                         <div class="efficiency efficiency-srscola">
                             <ul>
@@ -595,7 +595,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 134.png" alt="">
                         </div>
                     </div>
                 </section>
