--- a/шаблон — направления-средняя-школа-алгебра.html
+++ b/шаблон — направления-средняя-школа-алгебра.html
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 138.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -271,10 +271,10 @@
                 <div alt="" class="elevn-section-img4 icons-radius icons-style" src=" ">
                 </div>
                 <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/калькулятор.svg">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/Корень Х.svg">
                 </div>
                 <div class="nine-section-img6 icons-block  icons-style" tabindex="0">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/Процент.svg">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/10пи 1.svg">
                 </div>
             </section>
             <div class="container-item">
@@ -336,7 +336,7 @@
                                 </li>
                             </ul>
                             <div>
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 139.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview">
                             </div>
 
@@ -351,8 +351,8 @@
                 <section class="nine-section-dop-icons uk-scrollspy-inview "
                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
-                    <div class="nine-section-img5 icons-block  icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/Корень Х.svg">
+                    <div class="nine-section-img5 icons-shadow  icons-style" tabindex="0">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/Процент.svg">
                     </div>
 
                 </section>
@@ -371,18 +371,13 @@
                 </section>
             </div>
         </div>
-        <div class="diagnostika-srscola problems color16 angl uk-margin-bottom uk-margin-large-top">
+        <div class="diagnostika-srscola-alg problems color16 angl uk-margin-bottom uk-margin-large-top">
 
 
 
             <div class="uk-margin-bottom">
                 <div class="container">
-                    <section class="nine-section-dop-icons uk-scrollspy-inview "
-                        uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                        <div class="elevn-section-img3 color16 icons-shadow icons-style" tabindex="0">
-                            <img alt="" class="" src="https://cdn.nyutonika.ru/icons/циркуль.png">
-                        </div>
-                    </section>
+
 
                     <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom uk-grid" uk-grid="">
 
@@ -399,7 +394,8 @@
 
                             <div class="banner-content uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
-                                <div class="uk-padding uk-margin-top napravlenia_textblock_two napravlenia_srshk">
+                                <div
+                                    class="uk-padding uk-margin-top napravlenia_textblock_two napravlenia_srshk invers">
                                     Функции - магия исследования и не только
                                 </div>
                                 <div class=" uk-padding napravlenia_textblock ">
@@ -421,7 +417,8 @@
 
                             <div class="banner-content uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
-                                <div class="uk-padding uk-margin-top napravlenia_textblock_two napravlenia_srshk">
+                                <div
+                                    class="uk-padding uk-margin-top napravlenia_textblock_two napravlenia_srshk invers">
                                     Квадратные уравнения - способ выяснить траекторию движения планет
                                 </div>
 
@@ -444,7 +441,7 @@
 
 
                         <div class="uk-width-expand@m uk-margin uk-first-column">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 137.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
@@ -455,7 +452,8 @@
 
                             <div class="banner-content uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
-                                <div class="uk-padding uk-margin-top napravlenia_textblock_two napravlenia_srshk">
+                                <div
+                                    class="uk-padding uk-margin-top napravlenia_textblock_two napravlenia_srshk invers">
                                     Танец многочленов
                                 </div>
                                 <div class=" uk-padding napravlenia_textblock ">
@@ -477,7 +475,8 @@
 
                             <div class="banner-content uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
-                                <div class="uk-padding uk-margin-top napravlenia_textblock_two napravlenia_srshk">
+                                <div
+                                    class="uk-padding uk-margin-top napravlenia_textblock_two napravlenia_srshk invers">
                                     Красота квадратного корня
                                 </div>
 
@@ -504,9 +503,14 @@
 
 
 
-        <div class="problems problems-srscola">
+        <div class="problems problems-srscola color16">
             <div class="container">
-
+                <section class="nine-section-dop-icons uk-scrollspy-inview "
+                    uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                    <div class="elevn-section-img3 color16 icons-shadow icons-style" tabindex="0">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/symbol.svg">
+                    </div>
+                </section>
                 <section class="container-item">
                     <h3 class="uk-text-center   uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
