Средняя школа алгебра 3

--- a/шаблон — направления-средняя-школа-алгебра.html
+++ b/шаблон — направления-средняя-школа-алгебра.html
@@ -383,7 +383,7 @@
 
 
                         <div class="uk-width-expand@m uk-margin uk-first-column">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 140.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
@@ -432,7 +432,7 @@
 
                         </div>
                         <div class="uk-width-expand@m   uk-margin">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 142.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
@@ -441,7 +441,7 @@
 
 
                         <div class="uk-width-expand@m uk-margin uk-first-column">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 137.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 144.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
@@ -490,7 +490,7 @@
 
                         </div>
                         <div class="uk-width-expand@m   uk-margin">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 143.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
@@ -532,7 +532,7 @@
                     <p class="uk-text-center" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
 
                     </p>
-                    <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium  uk-grid-stack"
+                    <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-padding-top uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium  uk-grid-stack"
                         uk-grid>
                         <div class="efficiency efficiency-srscola">
                             <ul>
@@ -544,17 +544,17 @@
                             </ul>
                         </div>
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
-                            <img class="uk-scrollspy-inview"
+                            <img class="uk-scrollspy-inview  "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 146.png" alt="">
                         </div>
                     </div>
-                    <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium  uk-grid-stack"
+                    <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-padding-top uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap-reverse uk-grid-medium  uk-grid-stack"
                         uk-grid>
-                        <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
-                            <img class="uk-scrollspy-inview"
+                        <div class="uk-flex-center uk-flex  problems-img uk-padding uk-first-column">
+                            <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 145.png" alt="">
                         </div>
                         <div class="efficiency efficiency-srscola">
                             <ul>
@@ -567,7 +567,7 @@
                         </div>
 
                     </div>
-                    <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium  uk-grid-stack"
+                    <div class="uk-child-width-1-2@l uk-child-width-1-2@m uk-padding-top uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium  uk-grid-stack"
                         uk-grid>
                         <div class="efficiency efficiency-srscola">
                             <ul>
@@ -577,10 +577,10 @@
                                 <li>элементы комбинаторики и теории вероятностей</li>
                             </ul>
                         </div>
-                        <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
-                            <img class="uk-scrollspy-inview"
+                        <div class="uk-flex-center uk-flex problems-img uk-padding uk-first-column">
+                            <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 147.png" alt="">
                         </div>
                     </div>
                 </section>
