Личный кабинет-родитель, кнопки

--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -124,11 +124,11 @@
                 </div>
             </div>
             <div class="page-lk">
-                <div class="uk-flex-between  uk-flex">
+                <div class="uk-flex-between  uk-flex title-lk">
                     <h1 class="uk-text-left uk-margin-top">Личный кабинет родителя</h1>
 
                     <div class="buttons-title-lk">
-                        <a class="pay-lk" href="">Оплатить</a><button class="b-st-dop danger-lk" href=""
+                        <a class="pay-lk" href="">Оплатить занятия</a><button class="danger-lk" href=""
                             target="_blank"></button>
 
                     </div>
