Неактивная кнопка Удалить ученика

--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -298,6 +298,26 @@
 
                         </ul>
                     </div>
+                    <div class="uk-margin-medium-top  student card-lk">
+                        <h3>Ученик: Тестовый ученик 4 (13 лет)</h3>
+                        <ul>
+                            <li>
+                                <div class="card-lk color-next-class-card educator-non">
+                                    <div class="card-lk_content">
+                                        <p><span>Преподаватель:</span>ещё не назначен</p>
+                                    </div>
+                                    <div class="card-lk_button">
+                                        <form action="">
+                                            <button type="submit" class="color-red inactive">
+                                                Удалить ученика
+                                            </button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </li>
+
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="uk-margin-large-top">
