Update шаблон — направления-средняя-школа-алгебра.html

--- a/шаблон — направления-средняя-школа-алгебра.html
+++ b/шаблон — направления-средняя-школа-алгебра.html
@@ -235,7 +235,7 @@
 
         <h1 class="h1-napravlenia napravlenia_nach napravlenia_srshk"
             uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
-            Алгебра 7-9 класс класс
+            Алгебра 7-9 класс  
         </h1>
 
 
