--- a/шаблон — направления-средняя-школа-геометрия.html
+++ b/шаблон — направления-средняя-школа-геометрия.html
@@ -258,7 +258,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 148.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -339,7 +339,7 @@
                                 <li>поддерживаем ученика и родителей, вместе радуемся достижениям</li>
                             </ul>
                             <div>
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 149.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview">
                             </div>
 
@@ -352,23 +352,11 @@
                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                     <div class="nine-section-img5 icons-shadow  icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/Процент.svg">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/спектр.png">
                     </div>
 
                 </section>
-                <section class="uk-padding-large">
-                    <h3 class="uk-text-center   uk-scrollspy-inview "
-                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
-                        Загадки геометрических фигур
 
-                    </h3>
-                    <h4 class="uk-text-center uk-scrollspy-inview"
-                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
-                        По статистике проблемы с геометрией возникают у каждого второго ученика. Множество формул и
-                        правил, необходимость четко и аккуратно чертить фигуры - что еще вызывает панику на уроках?
-                    </h4>
-
-                </section>
             </div>
         </div>
         <div class="diagnostika-srscola  problems color16   uk-margin-bottom uk-margin-large-top">
@@ -377,13 +365,25 @@
 
             <div class="uk-margin-bottom">
                 <div class="container">
+                    <section class="uk-padding-large">
+                        <h3 class="uk-text-center   uk-scrollspy-inview "
+                            uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
+                            Загадки геометрических фигур
 
+                        </h3>
+                        <h4 class="uk-text-center uk-scrollspy-inview"
+                            uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
+                            По статистике проблемы с геометрией возникают у каждого второго ученика. Множество формул и
+                            правил, необходимость четко и аккуратно чертить фигуры - что еще вызывает панику на уроках?
+                        </h4>
+
+                    </section>
 
                     <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom uk-grid" uk-grid="">
 
 
                         <div class="uk-width-expand@m uk-margin uk-first-column">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 151.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
@@ -434,7 +434,7 @@
 
                         </div>
                         <div class="uk-width-expand@m   uk-margin">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 152-1.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
@@ -443,7 +443,7 @@
 
 
                         <div class="uk-width-expand@m uk-margin uk-first-column">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 153.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
 
                         </div>
@@ -518,7 +518,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
                             <img class="uk-scrollspy-inview  "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 154.png" alt="">
                         </div>
                     </div>
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-padding-top uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap-reverse uk-grid-medium  uk-grid-stack"
@@ -526,7 +526,7 @@
                         <div class="uk-flex-center uk-flex  problems-img uk-padding uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 155.png" alt="">
                         </div>
                         <div class="efficiency efficiency-srscola">
                             <ul>
@@ -553,7 +553,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-padding uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 156.png" alt="">
                         </div>
                     </div>
                 </section>
