--- a/шаблон — направления-малышам-логопед.html
+++ b/шаблон — направления-малышам-логопед.html
@@ -259,7 +259,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 157.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -439,8 +439,9 @@
                                 Результаты наших занятий
 
                             </div>
-                            <div class=" uk-padding napravlenia_textblock ">
-                                <ul>
+                            <div class="uk-padding napravlenia_textblock ">
+
+                                <ul class="napravlenia_spisok">
                                     <li>запуск речи</li>
                                     <li>формирование фразовой речи</li>
                                     <li>развитие логики. мышления, внимания и памяти</li>
