--- a/шаблон — направления-малышам-логопед.html
+++ b/шаблон — направления-малышам-логопед.html
@@ -350,7 +350,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 158.png" alt="">
                         </div>
                         <div class="efficiency efficiency-malisham efficiency_rus-nach">
                             <ul>
@@ -376,7 +376,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 159.png" alt="">
                         </div>
                     </div>
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium  uk-grid-stack"
@@ -384,7 +384,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 160.png" alt="">
                         </div>
                         <div class="efficiency efficiency-malisham efficiency_rus-nach">
                             <ul>
@@ -424,7 +424,7 @@
 
 
                     <div class="uk-width-expand@m">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 161.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                     </div>
