--- a/шаблон — направления-малышам-логопед.html
+++ b/шаблон — направления-малышам-логопед.html
@@ -18,7 +18,7 @@
     <script src="js/uikit.js" type="text/javascript"></script>
     <script src="js/uikit-icons.js" type="text/javascript"></script>
     <script src="js/scripts.js" type="text/javascript"></script>
-    <title>Ньютоника - логопед дошкольникам</title>
+    <title>Ньютоника - логопед малышам</title>
 </head>
 
 <body>
@@ -235,7 +235,7 @@
 
         <h1 class="h1-napravlenia napravlenia_nach napravlenia_nach_rus-nach"
             uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
-            Логопед дошкольникам
+            Логопед малышам
         </h1>
 
 
