--- a/шаблон — направления-малышам-дефектолог.html
+++ b/шаблон — направления-малышам-дефектолог.html
@@ -259,7 +259,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 162.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -295,7 +295,7 @@
             </div>
         </div>
 
-        <div class="uk-margin-bottom">
+        <div class="">
             <div class="container">
                 <section class="container-item">
                     <div class="efficiency efficiency-malisham"
@@ -332,7 +332,7 @@
                     <div class="uk-text-center" uk-grid>
                         <div class="uk-width-1-3@m">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 163.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -346,7 +346,7 @@
                         </div>
                         <div class="uk-width-1-3@m">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 164.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -361,7 +361,7 @@
                         </div>
                         <div class="uk-width-1-3@m">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 165-2.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom">
                                 <p class="uk-text-center uk-text-bolder  uk-scrollspy-inview "
@@ -404,12 +404,12 @@
                 </section>
                 <div
                     class="uk-padding uk-margin-top uk-margin-large-bottom napravlenia_textblock_two napravlenia_textblock_two_rushach napravlenia_textblock_banner-nach">
-                    Малыш и дефектолог. Чем полезны занятия?
+                    Малыш и дефектолог. <br> Чем полезны занятия?
                 </div>
                 <section class="uk-flex-between one-section uk-margin-large-bottom" uk-grid>
 
                     <div class="uk-width-expand@m">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 166-2.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                     <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -448,7 +448,7 @@
                     </div>
 
                     <div class="uk-width-expand@m">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 167.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                 </section>
@@ -467,7 +467,8 @@
 
                     <div class="teacher-text-trend uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
-                        Все логопеды онлайн-школы Ньютоника прошли процедуру сертификации, имеют дипломы, дающие право
+                        Все дефектологи онлайн-школы Ньютоника прошли процедуру сертификации, имеют дипломы, дающие
+                        право
                         на ведение профессиональной деятельности, регулярно проходят обучение и повышают квалификацию в
                         Институте коррекционной педагогики.
                     </div>
