Средняя школа физика 2

--- a/шаблон — направления-средняя-школа-физика.html
+++ b/шаблон — направления-средняя-школа-физика.html
@@ -259,7 +259,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 168.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -268,12 +268,12 @@
             <section class="two-section-dop-icons uk-scrollspy-inview "
                 uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
-                <div alt="" class="elevn-section-img3 icons-radius icons-style" src="">
+                <div alt="" class="elevn-section-img3 icons-radius icons-style color17" src="">
                 </div>
-                <div alt="" class="elevn-section-img4 icons-radius icons-style" src=" ">
+                <div alt="" class="elevn-section-img4 icons-radius icons-style color9" src=" ">
                 </div>
                 <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/циркуль.png">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/лампа-с-магнитом.svg">
                 </div>
                 <div class="nine-section-img6 icons-block  icons-style" tabindex="0">
                     <img alt="" class="" src="https://cdn.nyutonika.ru/icons/graph.svg">
@@ -319,11 +319,26 @@
                 <section class="container-item">
                     <div class="efficiency efficiency-srscola uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
+
+                        <div class="icons-block  uk-scrollspy-inview uk-flex uk-flex-center"
+                            uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                            <img alt="" class="" src="https://cdn.nyutonika.ru/svg/волны.svg">
+                        </div>
+
                         <h4 class="uk-scrollspy-inview uk-text-center"
                             uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
                             В школьные годы физика кажется ученикам настоящей абракадаброй - формулы с незнакомыми
                             буквами, какие-то схемы со стрелочками, правила, которые необходимо повторять слово в слово
-                            по учебнику, иначе засчитают как ошибку. <br>Между тем, стоит немного окунуться в эту
+                            по учебнику, иначе засчитают как ошибку.
+
+                        </h4>
+                        <div class="icons-block  uk-scrollspy-inview uk-flex uk-flex-center"
+                            uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                            <img alt="" class="" src="https://cdn.nyutonika.ru/svg/батарейки.svg">
+                        </div>
+                        <h4 class="uk-scrollspy-inview uk-text-center"
+                            uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
+                            Между тем, стоит немного окунуться в эту
                             интересную
                             науку, начинаешь понимать, что мир подчиняется ее законам: от зеркала в ванной до
                             холодильника и телефона, несомненно, все это - ее творения.
@@ -344,7 +359,7 @@
                                 <li>помощь в подготовке к контрольным и олимпиадам</li>
                             </ul>
                             <div>
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 169.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview">
                             </div>
 
@@ -353,14 +368,7 @@
                     </div>
                 </section>
 
-                <section class="nine-section-dop-icons uk-scrollspy-inview "
-                    uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
-                    <div class="nine-section-img5 icons-shadow  icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/спектр.png">
-                    </div>
-
-                </section>
 
             </div>
         </div>
@@ -370,6 +378,14 @@
 
             <div class="uk-margin-bottom">
                 <div class="container">
+                    <section class="nine-section-dop-icons uk-scrollspy-inview "
+                        uk-scrollspy="cls: uk-animation-fade; delay: 600">
+
+                        <div class="nine-section-img5 icons-block  icons-style" tabindex="0">
+                            <img alt="" class="" src="https://cdn.nyutonika.ru/icons/воздушный-шар.svg">
+                        </div>
+
+                    </section>
                     <section class="uk-padding-large">
                         <h3 class="uk-text-center   uk-scrollspy-inview "
                             uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
@@ -468,7 +484,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
                             <img class="uk-scrollspy-inview  "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 171.png" alt="">
                         </div>
                     </div>
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m  uk-padding-top uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap-reverse uk-grid-medium  uk-grid-stack"
@@ -476,7 +492,7 @@
                         <div class="uk-flex-center uk-flex  problems-img uk-padding uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 170.png" alt="">
                         </div>
                         <div class="efficiency efficiency-srscola">
                             <ul>
